
	* NCO 4.9.4-beta01 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.4-beta01: Uncle Leroy';git push
	git tag -a 4.9.4-beta01 -m 'ncra doc prw';git push --tags

	* Henry verifies build-compliance of --disable-udunits

	* Change --cb from flag into --clm_nfo/--clm_bnd synonym, start documentation

2020-08-26  Charlie Zender  <zender@uci.edu>

	* Make --dbg_lvl synonym to -D for all binary executables

	* ncbo re-add one set of SIMD timers for debugging use

2020-08-25  Charlie Zender  <zender@uci.edu>

	* index.shtml: add MD5, SHA hashes to Windows self-extracting tarball on homepage

	* ncra add --prw synonym to --per_record_weights

	* NCO 4.9.4-alpha15 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.4-alpha15: Madelines';git push
	git tag -a 4.9.4-alpha15 -m 'nco_vrt_ntp fix;ncclimo drn cf cnv works';git push --tags

	* nco_vrt_ntp() assign grd_sz_in (from input file) := grd_sz_out (from template file)
	This fixes vertical interpolation when PS is in vrt_fl, a regression introduced in 4.9.2

2020-08-24  Charlie Zender  <zender@uci.edu>

	* Informational error message when vertical interpolation horizontal/temporal grids mismatched

	* Start to utilize tpd=0 for monthly mean data thanks to clm_nfo bugfix

2020-08-23  Charlie Zender  <zender@uci.edu>

	* NCO 4.9.4-alpha14 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.9.4-alpha14: Fiscalini';git push
	git tag -a 4.9.4-alpha14 -m 'ncclimo clm_nfo to ncra, deprecate	c2b, add cb_tst.nco;ncremap nni';git push --tags

	* Always define unt_val and cln_val, fix DJF clm_nfo interpretation, results look valid

2020-08-21  Charlie Zender  <zender@uci.edu>

	* Re-write ncra to use unified cb structure based on clm_nfo argument

	* Fix new link error with extern double hav(double x1, double x2)

	* Merge Henry's nearest neighbor distance weighted interpolation algorithm

2020-08-20  Charlie Zender  <zender@uci.edu>

	* Nicefy and commit climatology bounds test script cb_tst.nco
